# life-incubator-desktop-client

./: CMakeLists.txt  CMakePresets.json  README.md  TO-DO.md
core/: bluetooth.cpp  bluetooth.hpp
data/: incubation.cpp  incubation.hpp  incubator.cpp  incubator.hpp
extra/: imagepanel.cpp  imagepanel.h  wxVLCMain.cpp  wxVLCMain.h
msvc/: install.wxs  resource.rc
tests/: dna_example
ui/: app.cpp  app.hpp  incubation_panel.cpp  incubation_panel.hpp  incubation_queue_panel.cpp  incubation_queue_panel.hpp  incubator_panel.cpp  incubator_panel.hpp  incubators_notebook.cpp  incubators_notebook.hpp  main_frame.cpp  main_frame.hpp  menu_bar.cpp  menu_bar.hpp  new_incubation_dialog.cpp  new_incubation_dialog.hpp  task_bar.cpp  task_bar.hpp
